# Perfect6502Port

./: CMakeLists.txt  README.md
src/console-utils/: CMakeLists.txt  ansi_colors.h  console_utils.c  console_utils.h
src/cpucheck/: CMakeLists.txt  main.c
src/measure/: CMakeLists.txt  measure.c
src/p6502/: CMakeLists.txt  exported.h  ext_cycle.c  ext_cycle.h  netlist_6502.h  netlist_sim.h  perfect6502.c  perfect6502.h
src/testbed/: CMakeLists.txt  main.c
